@@ -12,7 +12,7 @@
 .\"   which should have been included with this file.  If this file is
 .\"   file is missing or damaged, see the license at "http://www.cups.org/".
 .\"
-.TH lpadmin 8 "CUPS" "7 January 2011" "Apple Inc."
+.TH lpadmin 8 "CUPS" "10 May 2011" "Apple Inc."
 .SH NAME
 lpadmin \- configure cups printers and classes
 .SH SYNOPSIS
@@ -82,6 +82,18 @@ Sets a standard System V interface script or PPD file for the printer from the
 \fImodel\fR directory or using one of the driver interfaces. Use the \fI-m\fR
 option with the \fIlpinfo(8)\fR command to get a list of supported models.
 .TP 5
+-o cupsIPPSupplies=true
+.TP 5
+-o cupsIPPSupplies=false
+.br
+Specifies whether IPP supply level values should be reported.
+.TP 5
+-o cupsSNMPSupplies=true
+.TP 5
+-o cupsSNMPSupplies=false
+.br
+Specifies whether SNMP supply level (RFC 3805) values should be reported.
+.TP 5
 -o job-k-limit=value
 .br
 Sets the kilobyte limit for per-user quotas. The value is an
@@ -123,8 +135,8 @@ specified port monitor must be listed in the printer's PPD file.
 .TP 5
 -o printer-error-policy=name
 .br
-Sets the error policy to be used when the printer backend is 
-unable to send the job to the printer. The name must be one of 
+Sets the error policy to be used when the printer backend is
+unable to send the job to the printer. The name must be one of
 "abort-job", "retry-job", "retry-current-job", or "stop-printer". The default
 error policy is "stop-printer" for printers and "retry-current-job" for
 classes.
